# options-pricing-lib

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_validation.py  demo.ipynb
notes/: code-walkthrough.md  how-it-works.md
src/optionslib/: __init__.py  binomial.py  black_scholes.py  greeks.py  implied_vol.py  instruments.py  monte_carlo.py  vol_surface.py
tests/: test_black_scholes.py  test_cross_validation.py  test_edge_cases.py  test_greeks.py  test_implied_vol.py  test_vol_surface.py
